--- a/app/www/templates/mainmenu.html
+++ b/app/www/templates/mainmenu.html
@@ -1,16 +1,13 @@
-<ion-header-bar class="bar-positive">
-	<h1 class="title">UCL TB</h1>
-</ion-header-bar>
-	<div class="padding bar bar-subheader">
-		<h2>Main Menu</h2>
-	</div>
-<ion-content class="padding has-subheader">
-	<ion-refresher on-refresh="doRefresh()"></ion-refresher>
-
+<div class="padding bar">
+</div>
+<ion-content>
 	<div class="card">
-		<div class="item">
-			General Information
+		<div class="item item-divider">
+			<p>Main menu</p>
 		</div>
+		<a ui-sref="geninfo" class="button button-clear button-dark button-block">
+			General Information
+		</a>
 		<div class="item">
 			Clinical Service
 		</div>
