--- a/app/www/templates/clinserv.html
+++ b/app/www/templates/clinserv.html
@@ -1,4 +1,4 @@
-<div class="padding bar"></div>
+<!-- <div class="padding bar"></div> -->
 <ion-content>
 	<div class="card">
 		<div class="item item-divider">
