Fixed issue with object implementation in mainmenu array. Added Staff and Schedule pages and transitioned clinserv page to js.

--- a/app/www/templates/mainmenu.html
+++ b/app/www/templates/mainmenu.html
@@ -1,4 +1,4 @@
-<ion-view view-title="UCL TB">
+<ion-view view-title="Main Menu">
 	<ion-content class="has-header">
 		<ion-list>
 			<ion-item class="card" ng-repeat="item in menuitems" href="#/{{ item.filename }}">
