--- a/app/www/templates/schedule.html
+++ b/app/www/templates/schedule.html
@@ -1,4 +1,4 @@
-<ion-view view-title="General Information">
+<ion-view view-title="Clinical Schedule">
 	<ion-content class="has-header">
 	</ion-content>
 </ion-view>
