--- a/app/www/templates/clinserv.html
+++ b/app/www/templates/clinserv.html
@@ -1,14 +1,8 @@
 <!-- <div class="padding bar"></div> -->
-<ion-content>
-	<div class="card">
-		<div class="item item-divider">
-			<p>Clinical Service</p>
-		</div>
-		<a ui-sref="geninfo" class="button button-clear button-dark button-block">
-			Clinical Schedule
-		</a>
-		<a ui-sref="geninfo" class="button button-clear button-dark button-block">
-			Staff
-		</a>
-	</div>
-</ion-content>
+<ion-view view-title="Clinical Services">
+	<ion-content class="has-header">
+		<ion-list>
+			<ion-item class="card" ng-repeat="item in menuitems" href="#/{{ item.filename }}">
+				{{ item.name }}
+	</ion-content>
+</ion-view>
