--- a/app/www/pages/templates/stafftemplate.html
+++ b/app/www/pages/templates/stafftemplate.html
@@ -1,7 +1,7 @@
 <ion-view view-title="More Info">
 	<ion-content class="has-header">
 		<ion-item class="item-text-wrap"
-			ng-repeat="item in stafflist | filer: {{ ref: whichstaff }}">
+			ng-repeat="item in stafflist | filter: { ref: whichstaff }">
 			<img src="http://placehold.it/100x100">
 			<h2>{{ item.name }}</h2>
 			<h3>{{ item.role }}</h2>
