participation page and tab added

--- a/app/www/pages/templates/projecttemplate.html
+++ b/app/www/pages/templates/projecttemplate.html
@@ -3,6 +3,17 @@
 		class="has-header">
 		<h2 align="center"><u>{{ item.name }}</u></h2>
 		<p align="center">{{item.info}}</p>
+		<br/>
+			<a href="#/participate" style="text-decoration: none;">
+				<button class="button button-block button-balanced">
+					I am interested in participating
+				</button>
+			</a>
+			<a href="#/feedback" style="text-decoration: none;">
+				<button class="button button-block button-balanced">
+					I've participated in this study and would like to leave feedback
+				</button>
+			</a>
 	</ion-content>
 </ion-view>
 
