Question number added on top of every page

--- a/app/www/pages/templates/questiontemplate.html
+++ b/app/www/pages/templates/questiontemplate.html
@@ -3,6 +3,8 @@
 		<ion-item>
 			<div class="card">
 				<div class="item item-text-wrap" ng-repeat="item in quiz | filter: { ref: whichquestion }">
+					<p align="center"><b>{{item.type}}</b></p>
+					<br/>
 					<h2 align="center">{{ item.question}}</h2> 
 					<a href="#/{{item.true}}" style="text-decoration: none;">
 						<button class="button button-block button-balanced">
@@ -17,7 +19,6 @@
 				</div>
 			</div>
 		</ion-item>
-		
+
 	</ion-content>
 </ion-view>
-
