--- a/app/www/pages/templates/questiontemplate.html
+++ b/app/www/pages/templates/questiontemplate.html
@@ -3,7 +3,7 @@
 		<ion-item>
 			<div class="card">
 				<div class="item item-text-wrap" ng-repeat="item in quiz | filter: { ref: whichquestion }">
-					<p align="center"><b>{{item.type}}</b></p>
+					<p align="center"><b><u>{{item.type}}</u></b></p>
 					<br/>
 					<h2 align="center">{{ item.question}}</h2> 
 					<a href="#/{{item.true}}" style="text-decoration: none;">
@@ -19,6 +19,5 @@
 				</div>
 			</div>
 		</ion-item>
-
 	</ion-content>
 </ion-view>
