--- a/app/www/pages/templates/questiontemplate.html
+++ b/app/www/pages/templates/questiontemplate.html
@@ -1,6 +1,8 @@
 <ion-view view-title="Quiz">
 	<ion-content class="has-header">
+		<p align="center"><b>Please select true or false</b></p>
 		<ion-item>
+			
 			<div class="card">
 				<div class="item item-text-wrap" ng-repeat="item in quiz | filter: { ref: whichquestion }">
 					<p align="center"><b><u>{{item.type}}</u></b></p>
