--- a/webapp/app/views/home.html
+++ b/webapp/app/views/home.html
@@ -12,10 +12,35 @@
       </div>
     </div>
   </script>
+  <script type="text/ng-template" id="myModalContent.html">
+    <div class="modal-header">
+        <h3 class="modal-title">I'm a modal!</h3>
+    </div>
+    <div class="modal-body">
+        <ul>
+            <li ng-repeat="item in items">
+                <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
+            </li>
+        </ul>
+        Selected: <b>{{ selected.item }}</b>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+  </script>
 
-  <uib-accordion close-others="oneAtATime">
-    <uib-accordion-group heading="General Information" is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
-      This content is straight in the template.
-    </uib-accordion-group>
-  </uib-accordion>
+
+  <!-- Main Body -->
+  <div ng-controller="ModalCtrl as modal">
+    <uib-accordion close-others="oneAtATime">
+      <uib-accordion-group is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
+  			<uib-accordion-heading>
+  				General Information
+  				<i type="button" class="pull-right glyphicon glyphicon-pencil" ng-click="modal.open('lg')"></i>
+          </uib-accordion-heading>
+  				{{ home.base.about }}
+      </uib-accordion-group>
+    </uib-accordion>
+  </div>
 </div>
