Attempted to add and use xeditable for modal.

--- a/webapp/app/views/home.html
+++ b/webapp/app/views/home.html
@@ -21,7 +21,7 @@
       <uib-accordion-group is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
   			<uib-accordion-heading>
   				General Information
-  				<i type="button" class="pull-right glyphicon glyphicon-pencil" ng-click="open('lg')"></i>
+  				<i type="button" class="pull-right glyphicon glyphicon-pencil" ng-click="open('lg', 'General Information')"></i>
           </uib-accordion-heading>
   				{{ base.about }}
       </uib-accordion-group>
