--- a/webapp/app/views/templates/modalTemplate.html
+++ b/webapp/app/views/templates/modalTemplate.html
@@ -1,8 +1,9 @@
 <div class="modal-header">
-    <h3 class="modal-title">I'm a modal!</h3>
+    <h3 class="modal-title">{{ pageTitle }}</h3>
 </div>
-<div class="modal-body">
-    {{ pageContent }}
+<div class="modal-body input-group input-group-lg" editable-textarea="pageContent">
+  <!-- <textarea ng-model="pageContent" type="text" class="form-control"></textarea> -->
+  <!-- {{ pageContent }} -->
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
