--- a/app/www/pages/templates/projecttemplate.html
+++ b/app/www/pages/templates/projecttemplate.html
@@ -1,8 +1,14 @@
 <ion-view view-title="Project Information">
 	<ion-content ng-repeat="item in projects | filter: { ref: whichproj }"
 		class="has-header">
-		<h2 align="center"><u>{{ item.name }}</u></h2>
-		<p align="center">{{item.info}}</p>
+		<div class="card">
+			<div class="item-divider1">
+				<h2 align="center" style="color:white">{{item.name}}</h2>
+			</div>
+  <div class="item item-body">
+  <img class="full-image" src="{{item.image.one}}">
+  <h2 align="left" ng-repeat="item in item.info">{{item}}</h2>
+  <img class="full-image" src="{{item.image.two}}">
 		<br/>
 			<a href="#/participate" style="text-decoration: none;">
 				<button class="button button-block button-balanced">
@@ -14,6 +20,9 @@
 					I've participated in this study and would like to leave feedback
 				</button>
 			</a>
+  </div>
+		</div>
+
 	</ion-content>
 </ion-view>
 
