Changed buttons in quiz

--- a/app/www/pages/templates/questiontemplate.html
+++ b/app/www/pages/templates/questiontemplate.html
@@ -9,8 +9,8 @@
 					<p align="center"><b><u>{{item.type}}</u></b></p>
 					<br/>
 					<h2 align="center">{{ item.question}}</h2> 
-					<button class = "button button-block button-balanced" ng-click = "{{item.true}}">True</button>
-					<button class = "button button-block button-balanced" ng-click = "{{item.false}}">False</button>
+					<button class = "button button-block button-positive" ng-click = "{{item.true}}">True</button>
+					<button class = "button button-block button-assertive" ng-click = "{{item.false}}">False</button>
 				</div>
 			</div>
 
