Changed button in project template

--- a/app/www/pages/templates/projecttemplate.html
+++ b/app/www/pages/templates/projecttemplate.html
@@ -11,7 +11,7 @@
   <img class="full-image" src="{{item.image.two}}">
 		<br/>
 			<a href="#/participate" style="text-decoration: none;">
-				<button class="button button-block button-balanced">
+				<button class="button button-block button-energized">
 					I am interested in participating
 				</button>
 			</a>
