Added pink and black bacground custom styles

--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -8,3 +8,12 @@
   color: #222;
   font-weight: 20; }
   
+
+.black-background{
+    background-color: #000000;
+}
+
+.pink-background{
+    background-color: #ff1a53;
+}
+
