--- a/webapp/app/views/login.html
+++ b/webapp/app/views/login.html
@@ -1,4 +1,32 @@
-<div class="container">
+<div>
+<div class="header">
+	<div class="navbar navbar-default" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+
+				<a class="navbar-brand" href="#/">webapp</a>
+			</div>
+
+			<div class="collapse navbar-collapse" id="js-navbar-collapse">
+
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#/">Login</a></li>
+					<li><a ng-href="#/about">About</a></li>
+					<li><a ng-href="#/">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container container has-header">
 	<div class="jumbotron">
 		<div class="list list-inset">
 			<label class="input input-item">
@@ -11,4 +39,5 @@
 		<button ng-click="login.signin(username,password)"
 			class="button button-block button-stable">Login</button>
 	</div>
+</div>
 </div>
