--- a/webapp/app/views/staff.html
+++ b/webapp/app/views/staff.html
@@ -31,8 +31,9 @@
         <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#/">About</a></li>
-            <li><a ng-href="#/staff">Staff</a></li>
+            <li><a href="#/home">About</a></li>
+            <li class="active"><a ng-href="#/staff">Staff</a></li>
+            <li><a ng-href="#/projects">Projects</a></li>
             <li><a ng-href="#/">Contact</a></li>
           </ul>
         </div>
@@ -44,14 +45,12 @@
   <div class="container">
     <!-- <button type="button" class="aria-hidden pull-right glyphicon glyphicon-pencil" ng-click="open('lg')"></button> -->
     <uib-accordion close-others="oneAtATime">
-      <uib-accordion-group is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
-  			<uib-accordion-heading>
-  				General Information
-  				<i type="button" class="pull-right glyphicon glyphicon-pencil" ng-click="open('lg', 'General Information')"></i>
+      <uib-accordion-group ng-repeat="staff in staff">
+        <uib-accordion-heading>
+          {{ staff.name }}
+          <i type="button" class="pull-right glyphicon glyphicon-pencil" ng-click="open('lg', 'General Information')"></i>
         </uib-accordion-heading>
-  				<!-- {{ base.about }} -->
-          {{ genInfo }}
-      </uib-accordion-group>
+        <p>{{ staff.bio }}</p>
     </uib-accordion>
   </div>
 </div>
