--- a/webapp/app/views/templates/modalTemplate.html
+++ b/webapp/app/views/templates/modalTemplate.html
@@ -1,11 +1,13 @@
-<div class="modal-header">
+<div>
+  <div class="modal-header">
     <h3 class="modal-title">{{ pageTitle }}</h3>
-</div>
-<div class="modal-body input-group input-group-lg" editable-textarea="pageContent">
-  <!-- <textarea ng-model="pageContent" type="text" class="form-control"></textarea> -->
-  <!-- {{ pageContent }} -->
-</div>
-<div class="modal-footer">
+  </div>
+  <div class="modal-body input-group input-group-lg">
+    <textarea ng-model="pageContent" type="text" class="form-control"></textarea>
+    <!-- {{ pageContent }} -->
+  </div>
+  <div class="modal-footer">
     <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+  </div>
 </div>
