--- a/webapp/app/views/home.html
+++ b/webapp/app/views/home.html
@@ -33,6 +33,8 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#/">About</a></li>
             <li><a ng-href="#/staff">Staff</a></li>
+            <li><a ng-href="#/projects">Projects</a></li>
+            <li><a ng-href="#/quiz">Quiz</a></li>
             <li><a ng-href="#/">Contact</a></li>
           </ul>
         </div>
