--- a/webapp/app/views/staff.html
+++ b/webapp/app/views/staff.html
@@ -34,6 +34,7 @@
             <li><a href="#/home">About</a></li>
             <li class="active"><a ng-href="#/staff">Staff</a></li>
             <li><a ng-href="#/projects">Projects</a></li>
+            <li><a ng-href="#/quiz">Quiz</a></li>
             <li><a ng-href="#/">Contact</a></li>
           </ul>
         </div>
