--- a/webapp/app/views/staff.html
+++ b/webapp/app/views/staff.html
@@ -35,6 +35,7 @@
             <li class="active"><a ng-href="#/staff">Staff</a></li>
             <li><a ng-href="#/projects">Projects</a></li>
             <li><a ng-href="#/quiz">Quiz</a></li>
+            <li><a ng-href="#/schedule">Schedule</a></li>
             <li><a ng-href="#/">Contact</a></li>
           </ul>
         </div>
