--- a/webapp/app/views/schedule.html
+++ b/webapp/app/views/schedule.html
@@ -31,11 +31,11 @@
         <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#/">About</a></li>
+            <li><a href="#/home">About</a></li>
             <li><a ng-href="#/staff">Staff</a></li>
             <li><a ng-href="#/projects">Projects</a></li>
             <li><a ng-href="#/quiz">Quiz</a></li>
-            <li><a ng-href="#/schedule">Schedule</a></li>
+            <li class="active"><a ng-href="#/schedule">Schedule</a></li>
             <li><a ng-href="#/">Contact</a></li>
           </ul>
         </div>
@@ -47,14 +47,12 @@
   <div class="container">
     <!-- <button type="button" class="aria-hidden pull-right glyphicon glyphicon-pencil" ng-click="open('lg')"></button> -->
     <uib-accordion close-others="oneAtATime">
-      <uib-accordion-group is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
-  			<uib-accordion-heading>
-  				General Information
-  				<i type="button" class="pull-right glyphicon glyphicon-pencil" ng-click="open('lg', 'General Information')"></i>
+      <uib-accordion-group ng-repeat="item in schedule">
+        <uib-accordion-heading>
+          {{ item.type }}
+          <i type="button" class="pull-right glyphicon glyphicon-pencil" ng-click="open('lg', 'General Information')"></i>
         </uib-accordion-heading>
-  				<!-- {{ base.about }} -->
-          {{ genInfo }}
-      </uib-accordion-group>
+        <p ng-repeat="times in item.time">{{ times }}</p>
     </uib-accordion>
   </div>
 </div>
