--- a/webapp/app/views/projects.html
+++ b/webapp/app/views/projects.html
@@ -36,6 +36,7 @@
             <li class="active"><a ng-href="#/projects">Projects</a></li>
             <li><a ng-href="#/quiz">Quiz</a></li>
             <li><a ng-href="#/schedule">Schedule</a></li>
+            <li><a ng-href="#/faq">FAQ</a></li>
             <li><a ng-href="#/">Contact</a></li>
           </ul>
         </div>
