Swapped around the  background colours and made text colour black for buttons in project temp.

--- a/app/www/pages/templates/projecttemplate.html
+++ b/app/www/pages/templates/projecttemplate.html
@@ -12,13 +12,13 @@
 				<img class="full-image" src="{{item.image.two}}">
 				<br/>
 				<a href="#/participate" style="text-decoration: none;">
-					<button class="button button-block button-energized">
-						I am interested in participating
+					<button class="button button-block button-balanced">
+						<font style="color:black">I am interested in participating</font>
 					</button>
 				</a>
 				<a href="#/feedback" style="text-decoration: none;">
-					<button class="button button-block button-balanced">
-						I've participated in this study and would like to leave feedback
+					<button class="button button-block button-energized">
+						<font style="color:black">I've participated in this study and would like to leave feedback</font>
 					</button>
 				</a>
 			</div>
