--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -9,11 +9,11 @@
   font-weight: 20; }
   
 
-.black-background{
-    background-color: #000000;
+.white-background{
+    background-color: #ffffff;
 }
 
 .pink-background{
-    background-color: #ff1a53;
+    background-color: #ED174F;
 }
 
