--- a/webapp/app/views/login.html
+++ b/webapp/app/views/login.html
@@ -11,7 +11,7 @@
 					<span class="icon-bar"></span>
 				</button>
 
-				<a class="navbar-brand" href="#/">webapp</a>
+				<a class="navbar-brand" href="#/">UCLTB</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="js-navbar-collapse">
