--- a/app/www/pages/templates/contacttemplate.html
+++ b/app/www/pages/templates/contacttemplate.html
@@ -6,23 +6,24 @@
 				<h2 align="center" style="color:white">Contact Details</h2>
 				<h5 align="center" style="color:white">{{ item.hospital}} Reception</h5>
 			</div>
-			<div class="item item-text-wrap">
-				<div ng-repeat="item in item.number">
-					<h2 align="left"><b><u>{{item.type}}</u></b></h2>
-					<h2 align="left">{{item.number}}</h2>
-					</br>
-				</div>
-				<div ng-repeat="item in item.email">
-					<h2 align="left"><b><u>{{item.type}}</u></b></h2>
-					<h2 align="left">{{ item.email}}</h2>
-					</br>
-				</div>
-				
-				</br>
+			
+			<div class="item item-text-wrap" ng-repeat="item in item.address">
+				<h2 align="left"><b><u>{{item.type}}</u></b></h2>
+				<h2 align="left" ng-repeat="item in item.line">{{item}}</h2>
+			</div>
+			<div class="item item-text-wrap" ng-repeat="item in item.number">
+				<h2 align="left"><b><u>{{item.type}}</u></b></h2>
+				<h2 align="left">{{item.number}}</h2>
+			</div>
+			<div class="item item-text-wrap" ng-repeat="item in item.email">
+				<h2 align="left"><b><u>{{item.type}}</u></b></h2>
+				<h2 align="left">{{ item.email}}</h2>
 			</div>
 		</div>
 	</ion-content>
 </ion-view>
+
+
 
 
 
