--- a/webapp/app/views/login.html
+++ b/webapp/app/views/login.html
@@ -22,8 +22,8 @@
 		</div>
 	</div>
 
-	<div class="container has-header">
-		<div class="jumbotron">
+	<div class="container container-narrow has-header">
+		<div class="jumbotron container-fluid">
 			<form class="form-signin">
 				<h2 class="form-signin-heading">Please sign in</h2>
 				<label for="inputEmail" class="sr-only">Email address</label>
