analysis of taps on different buttons in pages

--- a/app/www/pages/templates/projecttemplate.html
+++ b/app/www/pages/templates/projecttemplate.html
@@ -12,12 +12,12 @@
 				<img class="full-image" src="{{item.image.two}}">
 				<br/>
 				<a href="#/participate" style="text-decoration: none;">
-					<button class="button button-block button-balanced">
+					<button class="button button-block button-balanced" ion-track-tap="Stated interest in participating" ion-track-data="expression" >
 						<font style="color:black">I am interested in participating</font>
 					</button>
 				</a>
 				<a href="#/feedback" style="text-decoration: none;">
-					<button class="button button-block button-energized">
+					<button class="button button-block button-energized" ion-track-tap="Stated interest in giving project feedback" ion-track-data="expression">
 						<font style="color:black">I've participated in this study and would like to leave feedback</font>
 					</button>
 				</a>
